Task 10 Fix. Change align-content to align-items in .section css.

--- a/0x02-CSS_advanced/styles/10-style.css
+++ b/0x02-CSS_advanced/styles/10-style.css
@@ -45,7 +45,7 @@ a {
     color: var(--color-primary);
 }
 .section-header {
-    align-content: var(--section-header-align);
+    align-items: var(--section-header-align);
 }
 .section-tagline {
     color: var(--color-primary);
